<resources>
    <string name="app_name">Pricely</string>
    <string name="label_error" translatable="true">Error</string>
    <string name="action_retry" translatable="true">Retry</string>
    <string name="title_vegetables" translatable="true">Vegetable</string>
    <string name="content_icon" translatable="true">Icon</string>
    <string name="menu_search" translatable="true">Search</string>
    <string name="menu_language" translatable="true">Language</string>
    <string name="label_all_product" translatable="true">All Product</string>
    <string name="label_fruit" translatable="true">Fruits</string>
    <string name="label_meat" translatable="true">Meats</string>
    <string name="label_vegetable" translatable="true">Vegetables</string>
    <string name="label_food" translatable="true">Meals</string>
    <string name="label_drink" translatable="true">Beverages</string>
    <string name="label_grocery" translatable="true">Groceries</string>
    <string name="label_other" translatable="true">Other</string>
    <string name="label_seafood" translatable="true">Seafoods</string>
    <string name="label_seasoning" translatable="true">Herbs</string>
    <string name="label_recommendation" translatable="true">Recommendation</string>
    <string name="action_view_all" translatable="true">View All</string>
    <string name="content_product_image" translatable="true">Product Image</string>
    <string name="label_price_chart" translatable="true">Price Chart</string>
    <string name="title_product_detail" translatable="true">Product Detail</string>
    <string name="label_current_month" translatable="true">(current month)</string>
    <string name="title_pick_month_and_year" translatable="true">Pick month and year</string>
    <string name="hint_month" translatable="true">Month</string>
    <string name="hint_year" translatable="true">Year</string>
    <string name="action_cancel" translatable="true">Cancel</string>
    <string name="action_pick" translatable="true">Pick</string>
    <string name="label_actual" translatable="true">Actual</string>
    <string name="label_prediction" translatable="true">Prediction</string>
    <string name="hint_search" translatable="true">What are you looking for?</string>
    <string name="label_suggestion" translatable="true">Suggestion</string>
    <string name="empty_search" translatable="true">It\'s empty</string>
    <string name="message_search" translatable="true">Try another keyword?</string>
    <string name="label_search_result" translatable="true">Show __%d__ result for __\"%s\"__</string>
    <string name="label_product_category" translatable="true">Product Category</string>
    <string name="label_description_allproduct" translatable="true">All product data available here</string>
    <string name="label_description_recommendation" translatable="true">Recommended products of choice</string>
    <string name="label_all_products_description">The following products are available in our system.</string>
    <string name="label_recommendation_description">These are our recommendation products</string>
    <string name="label_month">Month</string>
    <string name="label_year">Year</string>
</resources>