<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.main.SearchActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_search_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSuggestion"
                style="@style/PricelyInterSemiBoldText.GreyBlackish"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/label_suggestion"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSuggestion"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSuggestion"
                tools:itemCount="3"
                tools:listitem="@layout/item_suggestion" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupSuggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="tvSuggestion, rvSuggestion" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSearchResult"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/dimen_16dp"
                style="@style/PricelyInterSemiBoldText.GreyBlackish"
                tools:text="@string/label_search_result"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@id/rvSuggestion"/>

            <com.kennyc.view.MultiStateView
                android:id="@+id/msvSearch"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHeight_min="@dimen/dimen_200dp"
                app:layout_constraintTop_toBottomOf="@id/tvSearchResult"
                app:msv_emptyView="@layout/layout_empty"
                app:msv_loadingView="@layout/layout_loading"
                app:msv_errorView="@layout/layout_empty"
                app:msv_viewState="loading">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvVerticalProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    tools:itemCount="3"
                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/item_product_vertical"
                    tools:spanCount="2" />

            </com.kennyc.view.MultiStateView>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupSearchResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="tvSearchResult, msvSearch"/>

            <View
                style="@style/PricelySectionDivider"
                android:layout_marginTop="@dimen/dimen_0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/msvSearch" />

            <com.bangkit.pricely.util.reusable.ProductsSectionView
                android:id="@+id/viewRecommendationSection"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/msvSearch"
                app:title="@string/label_recommendation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>